[tool.poetry]
name = "ssn"
version = "0.1.0"
description = ""
authors = ["Madison Scott-Clary <makyo@drab-makyo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
